Refactor to use mvn test